@@ -737,16 +737,17 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,23,135,14
 END
 
-IDD_NEWVAL DIALOGEX 0, 0, 264, 23
+IDD_NEWVAL DIALOGEX 0, 0, 264, 38
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "New Value"
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     EDITTEXT        IDC_EDIT1,4,4,128,12,NOT WS_BORDER,WS_EX_CLIENTEDGE | 
                     WS_EX_RIGHT
     DEFPUSHBUTTON   "OK",IDOK,136,4,60,12
     PUSHBUTTON      "Cancel",IDCANCEL,200,4,60,12
+    CTEXT           "Static",IDC_TEXT,4,20,256,15,SS_CENTERIMAGE | SS_SUNKEN
 END
 
 IDD_VSTRACK DIALOGEX 0, 0, 142, 203
@@ -1331,10 +1332,9 @@ BEGIN
 
     IDD_NEWVAL, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 257
+        LEFTMARGIN, 4
+        RIGHTMARGIN, 260
         TOPMARGIN, 7
-        BOTTOMMARGIN, 16
     END
 
     IDD_VSTRACK, DIALOG
